<resources>
    <string name="app_name">PotroEats</string>
    <string name="btn_Resgistrarse">Registrarse</string>
    <string name="btn_Login">Login</string>
    <string name="hint_Correo">Correo</string>
    <string name="hint_Contraseña">Contraseña</string>
    <string name="hint_Nombre">Nombre</string>
    <string name="btn_Volver">Volver</string>
    <string name="Viewpager">View_Pager</string>
    <string name="btn_ordenar">Ordenar</string>
    <string name="btn_cuenta">Mi cuenta</string>
    <string name="btn_carrito">Carrito</string>
    <string name="TV_bienvenida">¡Bienvenido!</string>
    <string name="TV_menu">Menu</string>
    <string name="TV_itson">Cafeteria Itson Campus Guaymas</string>
    <string name="btn_logout">Cerrar sesion</string>
    <string name="btn_confirmar">Confirmar</string>
    <string name="Tarjeta">Tarjeta</string>



</resources>
