<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#55ADED"
    android:orientation="vertical">

    <Button
        android:id="@+id/btn_Volver"
        android:onClick="irPrincipal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/btn_Volver"
        android:layout_gravity="center"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <EditText
            android:id="@+id/ET_Correo"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/hint_Correo"
            android:text="Richard_1998_09@hotmail.com"
            android:inputType="textEmailAddress"
            android:textColorHint="#edebe9"

             />

        <EditText
            android:id="@+id/ET_Contraseña"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/hint_Contraseña"
            android:inputType="textPassword"
            android:text="Ricardos18"
            android:textColorHint="#edebe9" />

        <Button
            android:id="@+id/btn_Conectar"
            android:onClick="LogearUsuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_Login"
            android:layout_gravity="center"/>


    </LinearLayout>


</RelativeLayout>